# ai

./: Cargo.toml  Makefile  README.md
.github/workflows/: ai.yml
src/: data_store.rs  main.rs  openai.rs  prompt.rs  template.rs
tests/: add_prompt.rs  add_prompt_with_args.rs  cli_tests.rs
