[package]
name = "ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.5"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sled = "0.34.7"
tokio = "1.32.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
mockall = "0.11.4"
